# CloudWatchLogging

./: .gitignore  Cargo.toml  LICENSE  README.md  gen_docs.sh
docs/: all.html  index.html  sidebar-items.js  struct.Logger.html
src/: error.rs  levels.rs  lib.rs  prelude.rs  sync.rs
tests/: basic_test.rs
