[package]
name = "cloudwatch_logging"
version = "0.2.0"
edition = "2021"
authors = ["Omena, Inc. <info@omena.ai>", "Clelland Green III"]
description = "A simple library for logging to AWS CloudWatch Logs"
readme = "README.md"
repository = "https://github.com/Omena-Palette/CloudWatchLogging"
license = "MIT"
keywords = ["aws", "cloudwatch", "logging"]
categories = ["api-bindings", "development-tools::debugging"]
exclude = [
    "tests/**/*",
]
include = [
    "**/*.rs",
    "Cargo.toml",
]

[features]
singleton = ["lazy_static", "loom"]
loom = []
DEBUG = []
default = ["singleton", "DEBUG"]

[dependencies]
rusoto_core = "0.48.0"
rusoto_logs = "0.48.0"
chrono = "0.4.24"
tokio = { version = "1.6.1", features = ["rt-multi-thread", "sync", "time"] }
lazy_static = { version = "1.4.0", optional = true }
async-trait = "0.1.73"

[dev-dependencies]
tokio = { version = "1.6.1", features = ["full"] }
tokio-test = "0.4.2"
loom = { version = "0.7.0", features = ["futures"] }

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
rustdoc-args = ["--generate-link-to-definition"]
cargo-args = ["-Z", "build-std"]