[package]
name = "cloudwatch_logging"
version = "0.2.5"
edition = "2021"
authors = ["Omena Inc. <info@omena.ai>", "Clelland Green III"]
description = "A simple library for logging to AWS CloudWatch Logs"
readme = "README.md"
repository = "https://github.com/Omena-Palette/CloudWatchLogging"
license = "MIT"
keywords = ["aws", "cloudwatch", "logging"]
categories = ["api-bindings", "development-tools::debugging"]
exclude = [
    "tests/**/*",
]
include = [
    "**/*.rs",
    "Cargo.toml",
]

[features]
singleton = []
DEBUG = []

loom = []
doc_tests = []
im_ok_paying_for_testing = []
default = []

[dependencies]
rusoto_core = "0.48.0"
rusoto_logs = "0.48.0"
tokio = { version = "1.6.1", features = ["rt-multi-thread", "sync", "time"] }
async-trait = "0.1.73"

[dev-dependencies]
tokio = { version = "1.6.1", features = ["full"] }
tokio-test = "0.4.2"
loom = { version = "0.7.0", features = ["futures"] }

[package.metadata.docs.rs]
features = ["singleton"]
default-target = "x86_64-unknown-linux-gnu"
rustdoc-args = ["--generate-link-to-definition", "--cfg", "docsrs", "-Z", "unstable-options"]
cargo-args = ["-Z", "build-std"]